--- a/frontend/src/pages/admin/ListChapter.css
+++ b/frontend/src/pages/admin/ListChapter.css
@@ -45,6 +45,8 @@
     flex: 1;
     padding: 8px;
     margin-right: 10px;
+    border-radius: 10px;
+    border: 1px solid grey;
   }
   
   .add-chapter-form button {
@@ -59,3 +61,26 @@
   .add-chapter-form button:hover {
     background-color: #218838;
   }
+
+.add-chapter{
+  padding: 8px 12px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.instruction-text {
+  color: #6c757d; /* Màu xám */
+  font-size: 0.9em;
+  margin: 5px 0 10px; /* Khoảng cách trên và dưới */
+}
+
+.success-message {
+  color: rgb(0, 255, 4);
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  font-weight: bold;
+}
