--- a/frontend/src/pages/admin/ListChapter.css
+++ b/frontend/src/pages/admin/ListChapter.css
@@ -25,7 +25,7 @@
     margin-left: 10px;
     padding: 5px 10px;
     background-color: #ffbb34;
-    color: white;
+    color: white ;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -83,4 +83,57 @@
   margin-top: 10px;
   border-radius: 5px;
   font-weight: bold;
+}
+
+.chapter-table {
+  margin-top: 20px;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.chapter-table th, .chapter-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.chapter-table th {
+  background-color: #f4f4f4;
+  text-align: left;
+  color: black;
+}
+
+.chapter-table button {
+  margin-left: 10px;
+    padding: 5px 10px;
+    background-color: #ffbb34;
+    color: white !important;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.button-group {
+  display: flex;
+  justify-content: flex-start; 
+  gap: 10px;
+}
+
+.button-group button{
+  padding: 5px 10px;
+    background-color: #ffbb34;
+    color: white ;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+a, .link {
+  text-decoration: none !important;
+  color: inherit !important;
+}
+
+
+a:hover, .link:hover {
+  color: inherit; 
+  text-decoration: none; 
 }
