--- a/frontend/src/pages/admin/ListChapter.css
+++ b/frontend/src/pages/admin/ListChapter.css
@@ -3,6 +3,31 @@
     margin-left: var(--sidebar-width);
 
   }
+  .modal {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex !important;
+    justify-content: center; 
+    align-items: center;
+    z-index: 1000;
+  }
+  .modal-content {
+    width:50% !important;
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  }
+  .modal-content input, select {
+    display: block;
+    width: 100%;
+    margin: 10px 0 !important;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid gray;
+  }
   
   h2 {
     text-align: center;
