--- a/frontend/src/pages/content_manager/QuestionManage.module.css
+++ b/frontend/src/pages/content_manager/QuestionManage.module.css
@@ -13,11 +13,30 @@
 
 .toolbar {
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 10px;
   padding: 10px;
-  background-color: #f5f5f5;
+}
+
+.toolbar input,
+select {
+  padding: 8px;
+  border: 1px solid #ccc;
   border-radius: 5px;
+}
+
+.toolbar select {
+  width: 13vw;
+}
+
+.commonInput {
+  height: 40px;
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
 }
 
 .addButton {
@@ -46,6 +65,23 @@
   margin-bottom: 20px;
 }
 
+.groupbtn {
+  padding-left: 10px;
+}
+
+.groupbtn button {
+  background-color: #AAB7B7;
+  padding: 5px;
+  margin-right: 10px;
+  border-radius: 5px;
+  border: 1px solid rgb(187, 187, 187);
+  cursor: pointer;
+  color: white;
+}
+
+.groupbtn :hover {
+  background-color: #92a1a1;
+}
 
 .questionHeader {
   display: flex;
@@ -154,11 +190,6 @@
   background-color: #eee;
 }
 
-.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
 /* Pagination */
 .pagination {
   display: flex;
@@ -190,9 +221,102 @@
   opacity: 0.5;
 }
 
-.dropFilter{
+.dropFilter {
   margin-right: 10px;
   padding: 8px;
   border: none;
   border-radius: 5px;
+}
+
+.pagination {
+  display: flex;
+  gap: 5px;
+  justify-content: flex-start;
+  margin-top: 20px;
+}
+
+.pagination button {
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+  cursor: pointer;
+}
+
+.pagination button.active {
+  background-color: rgb(66, 66, 66);
+  color: white;
+  font-weight: bold;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modalContent {
+  width: 50% !important;
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.modalContent input,
+select,label {
+  width: 100%;
+  display: block;
+  margin: 5px 0 !important;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.answerItem {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.correctAnswer {
+  background-color: #d4edda; 
+  border: 1px solid #28a745;
+}
+
+.isVisible {
+  margin-right: 10px;
+  color: rgb(255, 255, 255);
+  background-color: #28a745;
+  padding: 4px;
+  border-radius: 20px;
+}
+
+.inactive {
+  margin-right: 10px;
+  color: rgb(255, 255, 255);
+  font-weight: normal;
+  background-color: rgb(126, 126, 126);
+  padding: 4px;
+  border-radius: 20px;
+}
+.answer {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.radioInput{
+  width: 50px !important;
 }
