--- a/frontend/src/pages/StudentDashboard.css
+++ b/frontend/src/pages/StudentDashboard.css
@@ -64,6 +64,15 @@
   padding: 20px;
 }
 
+.loading-dashboard{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+}
 
 @media (max-width: 768px) {
   .main-content {
