--- a/frontend/src/pages/UserProfile.module.css
+++ b/frontend/src/pages/UserProfile.module.css
@@ -216,4 +216,72 @@
     padding: 0;
     font-size: 14px;
     margin-top: 10px;
+    margin-right: 15px;
   }
+
+  .modal {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex !important;
+    justify-content: center; 
+    align-items: center;
+    z-index: 1000;
+  }
+  .modal-content {
+    width:50% !important;
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  }
+  .modal-content input, select {
+    display: block;
+    width: 100%;
+    margin: 10px 0 !important;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid gray;
+  }
+
+  .removeButton {
+    font-size: 12px;
+    background: none;
+    color: rgb(255, 0, 0);
+    border: none;
+    padding: 14px 15px;
+    cursor: pointer;
+    border-radius: 20px;
+    margin-left: 10px;
+}
+
+.removeButton:hover {
+    background-color: rgb(255, 237, 237);
+}
+
+.modal {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex !important;
+  justify-content: center; 
+  align-items: center;
+  z-index: 1000;
+}
+.modalContent {
+  width:50% !important;
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+.modalContent input, select {
+  display: block;
+  width: 100%;
+  margin: 10px 0 !important;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid gray;
+}
