--- a/frontend/src/pages/student/ChooseSubject.module.css
+++ b/frontend/src/pages/student/ChooseSubject.module.css
@@ -48,10 +48,10 @@
     width: 100%;
     height: 160px;
     overflow: hidden;
-    color: rgb(255, 125, 125);
+    color: rgb(255, 255, 255);
     font-size: 40px;
     font-weight: 700;
-    background: linear-gradient(45deg, #ffd7de, #f1f1f1);
+    background: linear-gradient(45deg, #b9d1ff, #c0b2ff);
   }
   
   
