--- a/frontend/src/pages/HomePage.module.css
+++ b/frontend/src/pages/HomePage.module.css
@@ -5,8 +5,8 @@ body{
 .menu{
     display: flex;
     padding: 10px 40px;
-    background-color: rgb(255, 250, 250); /* Để menu không bị trong suốt */
-    z-index: 1000; /* Đảm bảo menu nằm trên tất cả các phần tử khác */
+    background-color: rgb(255, 250, 250); 
+    z-index: 1000; 
     position: fixed;
     top: 0;
     width: 100vw;
@@ -77,6 +77,7 @@ body{
     font-size: 7vw;
     margin: 0;
     color: white;
+    padding: 5px;
 }
 .backgroundContent h3{
     font-size: 1vw;
@@ -130,8 +131,8 @@ body{
     font-size: 3vw;
 }
 .items{
-    flex-basis: 20%;
-    width: 10vh;
+    flex-basis: 23%;
+    width: 12vh;
     background-color: white;
     padding: 5vw 0;
     border-left: 4px solid rgba(129, 129, 129, 0.2);
@@ -140,20 +141,22 @@ body{
 
 }
 .items i{
-    font-size: 3vw;
+    font-size: 4vw;
     color: rgb(105, 166, 252);
 }
 .items h4{
-    font-size: 1vw;
+    font-size: 1.4vw;
 }
 
 .items p{
-    font-size: 1vw;
+    margin-top: 20px;
+    font-size: 1.3vw;
     padding: 0 1vw;
 }
 
 .body2{
     text-align: center;
+    padding: 5vw 0;
 }
 .body2Title{
     padding-top: 1vw;
@@ -178,10 +181,11 @@ body{
     justify-content: center;
 }
 .body2Img img{
-    width: 30vw;
+    width: 32vw;
     height: 40vh;
-    flex-basis: 30%;
+    flex-basis: 32%;
     padding: 1vh;
+    margin: 3vw 0;
 }
 .body3{
     text-align: center;
