--- a/frontend/src/pages/UserProfile.module.css
+++ b/frontend/src/pages/UserProfile.module.css
@@ -130,7 +130,15 @@
   }
   
   .formGroup {
+
     flex: 1;
+
+  }
+
+  .formGroupBtn{
+    display: flex;
+    flex: 1;
+    align-items: center;
   }
   
   .formGroup label {
